--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 /nbproject/private/
 nbproject/project.xml
 nbproject/project.properties
+tuetc/school_manager/public/images/database/avatar/_4cf89497ca3aad57047df332cb4a148659eafdd8990da1.63902565.jpg
